# jisho-cli

./: Cargo.toml  README.md
src/: kanji_search.rs  main.rs  sentence_search.rs  util.rs  word_search.rs
