[package]
name = "jisho-cli"
description = "A simple cli tool to lookup Japanese words using jisho.org"
version = "0.1.4"
authors = ["jojii <jojii@gmx.net>", "Hiers <dvmap@protonmail.com"]
readme = "README.md"
repository = "https://github.com/Hiers/jisho-cli"
license = "GPL-3.0"
edition = "2018"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_Shell"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.139"

[dependencies]
ureq = { version = "2.1.0", features = ["json"] }
serde_json = "1.0.64"
colored = "2.0.0"
argparse = "0.2.2"
atty = "0.2"
kradical_parsing = "0.1.0"

[features]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
